--- a/kmaps-app/src/views/common/FeaturePager/FeaturePager.scss
+++ b/kmaps-app/src/views/common/FeaturePager/FeaturePager.scss
@@ -58,6 +58,7 @@
     margin-left: 1rem;
     margin-right: 0.5rem;
     text-align: center;
+    border: 1px solid #ccc;
 }
 .c-pager__counterWrapper .c-pager__counterMax {
     padding: 0 1rem;
