--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -463,8 +463,9 @@ div.image-wrapper.center figcaption {
         background-color: #fff;
         /*  margin-top: -3.4rem; */
         .nav-tabs {
-            padding: 0 0 0.75rem;
-            margin: 0 0 0 1rem;
+            padding: 0 0 0.25rem;
+            margin: 0.5rem 0 0 1rem;
+            border-bottom: none;
             .nav-link {
                 padding: 0;
                 margin: 0;
@@ -473,12 +474,12 @@ div.image-wrapper.center figcaption {
                 border: none;
                 border-right: 1px solid #aaa;
                 font-size: 1.6rem;
-                color: #000;
                 color: $color-mandala;
-                letter-spacing: 0.0375rem;
+                letter-spacing: 0.1rem;
                 position: relative;
                 cursor: default;
-                transition: all 0.35s;
+                font-weight: bold;
+                border-radius: 0;
 
                 &:nth-of-type(2) {
                     width: 38%;
@@ -488,7 +489,7 @@ div.image-wrapper.center figcaption {
                 }
                 &.active {
                     background-color: transparent;
-                    font-weight: bold;
+                    letter-spacing: 0.1rem;
                 }
                 &.active#kmaps-tab-tab-places {
                     color: $color-places !important;
@@ -508,14 +509,11 @@ div.image-wrapper.center figcaption {
                     content: '';
                     display: inline-block;
                     border-style: solid;
-                    border-width: 8px 7px 1px 7px;
-                    border-color: white;
-
-                    border-width: 1px 7px 7px 7px;
+                    border-width: 0.1rem 0.55rem 0.55rem 0.55rem;
                     border-color: transparent transparent red;
                     border-bottom-color: inherit;
                     position: absolute;
-                    bottom: -0.5rem;
+                    bottom: -0.3rem;
                     left: 50%;
                     margin-left: -0.4rem;
                     background: white;
@@ -527,7 +525,7 @@ div.image-wrapper.center figcaption {
                     display: inline-block;
                     border-bottom-style: solid;
                     position: absolute;
-                    bottom: -0.75rem;
+                    bottom: -0.65rem;
                     left: 0;
                 }
             }
@@ -762,11 +760,11 @@ div.image-wrapper.center figcaption {
             content: '';
             width: 1.5rem;
             border-style: solid;
-            border-left-style: dotted;
+            border-left-style: dashed;
             border-color: $color-mandala;
             border-width: 3rem 0 2.5rem 0.1rem;
             border-radius: 0.05rem 0 0.75rem 0.75rem;
-            opacity: 0.2;
+            opacity: 0.25;
             transition: all 0.35s;
         }
         &:-webkit-direct-focus {
