--- a/kmaps-app/src/views/KmapTree/KmapTree.scss
+++ b/kmaps-app/src/views/KmapTree/KmapTree.scss
@@ -23,10 +23,11 @@ ul.fancytree-container {
     /* min-height: calc(100vh - 13.25rem);
     max-height: calc(100vh - 13.25rem); */
     height: calc(100vh - 13.25rem);
-    margin: 0;
+    margin: 0.6rem 0 0;
     padding-top: 1rem;
     padding-left: 2rem;
-    border-width: 0 0.1rem 0.3rem 0;
+    border-width: 0.2rem 0.1rem 0.3rem 0;
+    border-top-left-radius: 0;
 }
 .l-column__related .c-kmaptree {
     width: 22rem;
