--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -480,6 +480,34 @@ div.image-wrapper.center figcaption {
                 cursor: default;
                 font-weight: bold;
                 border-radius: 0;
+                transition: all 1s;
+
+                &:hover::before {
+                    width: 0;
+                    height: 0;
+                    content: '';
+                    display: inline-block;
+                    border-style: solid;
+                    border-width: 0.1rem 0.55rem 0.55rem 0.55rem;
+                    border-color: transparent transparent #ccc;
+                    position: absolute;
+                    bottom: -0.3rem;
+                    left: 50%;
+                    margin-left: -0.4rem;
+                    background: white;
+                }
+                &:hover::after {
+                    width: 100%;
+                    height: 8px;
+                    content: '';
+                    display: inline-block;
+                    border-bottom-color: #ccc;
+                    border-bottom-style: solid;
+                    position: absolute;
+                    bottom: -0.65rem;
+                    left: 0;
+                    background: white;
+                }
 
                 &:nth-of-type(2) {
                     width: 38%;
@@ -487,10 +515,7 @@ div.image-wrapper.center figcaption {
                 &:last-of-type {
                     border-right: none;
                 }
-                &.active {
-                    background-color: transparent;
-                    letter-spacing: 0.1rem;
-                }
+
                 &.active#kmaps-tab-tab-places {
                     color: $color-places !important;
                     border-color: $color-places;
@@ -517,6 +542,11 @@ div.image-wrapper.center figcaption {
                     left: 50%;
                     margin-left: -0.4rem;
                     background: white;
+
+                    &:hover::before {
+                        border-color: inherit;
+                        background: white;
+                    }
                 }
                 &.active::after {
                     width: 100%;
@@ -762,7 +792,7 @@ div.image-wrapper.center figcaption {
             border-style: solid;
             border-left-style: dashed;
             border-color: $color-mandala;
-            border-width: 3rem 0 2.5rem 0.1rem;
+            border-width: 2rem 0 2.5rem 0.1rem;
             border-radius: 0.05rem 0 0.75rem 0.75rem;
             opacity: 0.25;
             transition: all 0.35s;
