--- a/kmaps-app/src/views/common/FeatureCard/FeatureCard.scss
+++ b/kmaps-app/src/views/common/FeatureCard/FeatureCard.scss
@@ -34,7 +34,7 @@
     font-size: $font-size-default; // reset font size on cards with rem value
 }
 .card-deck .card:hover {
-    box-shadow: 0 8px 15px 2px #c0c0c0;
+    box-shadow: 0 8px 15px 2px #aaa;
 }
 .card-deck .card:active {
     box-shadow: 0 2px 5px #ccc;
@@ -76,10 +76,19 @@
     z-index: 1;
     opacity: 0.4;
     font-size: 2.25em;
+    span {
+        color: #aaa;
+        transition: scale 1s;
+    }
 }
-.c-card__grid__glyph--asset span {
-    color: #aaa;
+.c-view__wrapper .card:hover {
+    .c-card__grid__glyph--asset {
+        span {
+            color: #aaa;
+        }
+    }
 }
+
 // ----------------------------------
 // * BEGIN Card text content
 .card-body {
