--- a/kmaps-app/src/views/Terms/TermDefinitions/TermDefinitions.css
+++ b/kmaps-app/src/views/Terms/TermDefinitions/TermDefinitions.css
@@ -12,6 +12,7 @@
     border: 0.1rem solid #ccc;
     border-radius: 1rem;
     margin-bottom: 2rem;
+    margin-left: 1rem;
     min-height: 10rem;
 }
 .sui-termDefinitions__content .nav.nav-tabs {
