Style page layout in kmaps content fullwidth

--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -281,7 +281,7 @@ div.image-wrapper.center figcaption {
     min-height: 70rem;
     position: relative;
     > * {
-        max-width: 90rem;
+        // --- max-width: 90rem;
     }
     > h3 {
         margin-left: 1rem;
