Style update fixes for kmaps related viewer content formatting width layout

--- a/kmaps-app/src/views/Kmaps/RelatedViewer/RelatedsViewer.scss
+++ b/kmaps-app/src/views/Kmaps/RelatedViewer/RelatedsViewer.scss
@@ -397,6 +397,12 @@
     }
 }
 
+.kmap-content > p,
+.kmap-context > p,
+.kmap-related > p {
+    max-width: 90rem;
+}
+
 .c-relplaces-list.container-fluid {
     .c-featurePager__container.row {
         padding: 1rem;
