--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -271,6 +271,21 @@ div.image-wrapper.center figcaption {
 // * CONTENT SECTION: Node Header
 // --------------------------------------
 
+header.terms + .two-columns .c-content__main__kmaps > * {
+    max-width: 90rem;
+}
+
+.custSelect__component {
+    margin-bottom: 2rem;
+}
+
+header.terms
+    + .two-columns
+    .c-content__main__kmaps
+    .c-buttonGroup__viewMode__wrap {
+    max-width: 100% !important;
+}
+
 .c-content__main__kmaps {
     background-color: #fcfcfc;
     border: 1px solid #ccc;
