--- a/kmaps-app/src/views/Terms/TermsDefinitionsFilter/CustomSelect/CustomSelect.css
+++ b/kmaps-app/src/views/Terms/TermsDefinitionsFilter/CustomSelect/CustomSelect.css
@@ -11,11 +11,18 @@
 }
 .custSelect__header .custSelect__header-title {
     font-weight: bold;
+    font-size: 1.5rem;
+    text-transform: uppercase;
 }
 .custSelect__wrapper {
     position: relative;
     user-select: none;
     width: 100%;
+    cursor: default;
+    margin-top: 0.5rem;
+}
+.custSelect__wrapper * {
+    cursor: default;
 }
 .custSelect__main {
     position: relative;
@@ -31,18 +38,22 @@
     visibility: visible;
     pointer-events: all;
 }
+.custSelect__main .custSelect__option:hover {
+    /* background-color:#91693c;
+    color:#fff; */
+}
 .custSelect__trigger {
     position: relative;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 6px 45px 6px 20px;
-    color: #3b3b3b;
+    padding: 1.4rem 7rem 1.5rem 2.5rem;
+    color: #222;
     cursor: pointer;
     border-width: 1px 0 1px 0;
     border-style: solid;
     border-color: #ccc;
-    font-size: 1.3rem;
+    font-size: 1.35rem;
 }
 .custSelect__trigger .custSelect__arrow {
     position: relative;
@@ -55,19 +66,19 @@
     content: '';
     position: absolute;
     bottom: 0px;
-    width: 0.15rem;
+    width: 0.3rem;
     height: 100%;
-    transition: all 0.5s;
+    transition: all 0.1s;
 }
 .custSelect__trigger .custSelect__arrow::before {
     left: -5px;
     transform: rotate(-45deg);
-    background-color: #394a6d;
+    background-color: #91693c;
 }
 .custSelect__trigger .custSelect__arrow::after {
     left: 5px;
     transform: rotate(45deg);
-    background-color: #394a6d;
+    background-color: #91693c;
 }
 .custSelect__main.cs_open .custSelect__arrow::before {
     left: -5px;
@@ -83,9 +94,10 @@
     top: 100%;
     left: 0;
     right: 0;
-    border: 1px solid #ccc;
-    border-bottom: 5px double #ccc;
+    border: 1px solid #91693c;
+    border-bottom: 5px solid #91693c;
     border-top: 0;
+    border-radius: 0 0 1rem 1rem;
     background: #fff;
     transition: opacity 0.5s;
     opacity: 0;
@@ -109,8 +121,19 @@
     background-color: #f9f9f9;
     color: #000;
 }
+.custSelect__option:not(.cs-selected) {
+    padding-left: 3rem;
+    padding-right: 7rem;
+}
 .custSelect__option.cs_selected {
     color: #ffffff;
     background-color: #91693c;
     border: none;
+}
+.custSelect__options .custSelect__option:first-child {
+    background: #eee;
+    color: #222;
+    text-align: right;
+    padding-right: 1.5rem;
+    font-weight: bold;
 }
