--- a/kmaps-app/src/views/Kmaps/RelatedViewer/RelatedsViewer.scss
+++ b/kmaps-app/src/views/Kmaps/RelatedViewer/RelatedsViewer.scss
@@ -409,7 +409,7 @@
         margin-left: -1.75rem;
         background-color: #777;
         color: white;
-        max-width: 1100px;
+        /* max-width: 1100px; */
         .c-featurePager__navButtons .icon {
             color: #bcbcbc;
 
@@ -425,4 +425,8 @@
     .row > div {
         padding-left: 0;
     }
+}
+
+.kmap-related .md3 {
+    min-width: 25rem;
 }
