style update AV video 2col layout scroll adj

--- a/kmaps-app/src/views/AudioVideo/AVViewer.css
+++ b/kmaps-app/src/views/AudioVideo/AVViewer.css
@@ -44,6 +44,8 @@
 #sui-viewerSide {
     padding-left: 2.5rem;
     max-width: 90rem;
+    max-height: 78rem;
+    overflow-x: scroll;
 }
 .c-content__main__kmaps #sui-viewerSide {
     padding: 0 0 0 1.5rem;
