--- a/kmaps-app/src/main/RightSideBar.css
+++ b/kmaps-app/src/main/RightSideBar.css
@@ -15,7 +15,10 @@
     padding: 0;
     min-height: 4.5rem;
     width: calc(100% - 10px);
-    cursor: default;
+    cursor: default !important;
+}
+.sui-advBox * {
+    cursor: default !important;
 }
 .l-column__search > section .sui-advBox:first-child {
     border-top: 1px solid #e0e0e0;
