--- a/kmaps-app/src/views/common/SmartRelateds.css
+++ b/kmaps-app/src/views/common/SmartRelateds.css
@@ -3,7 +3,7 @@
     overflow: hidden;
     position: relative;
     line-height: 1em;
-    max-height: 3.5em;
+    /* max-height: 3.5em; */
 }
 .c-smartRelateds__limited:before {
     content: '...';
