style related viewer tab hover fix

--- a/kmaps-app/src/views/Kmaps/placesinfo.scss
+++ b/kmaps-app/src/views/Kmaps/placesinfo.scss
@@ -81,6 +81,8 @@
     max-width: 100%;
     padding-top: 1rem;
 }
+.kmap-related,
+.nodeHeader-summary,
 .l-content__main__wrap {
     ul {
         margin-right: 1rem;
