--- a/kmaps-app/src/views/Kmaps/RelatedViewer/RelatedsViewer.scss
+++ b/kmaps-app/src/views/Kmaps/RelatedViewer/RelatedsViewer.scss
@@ -394,7 +394,7 @@
         padding: 1.2rem 2rem 0.75rem;
         border-color: #ddd;
         border-radius: 0.75rem 0.75rem 0 0;
-
+        background-color: #fff;
         &:hover,
         &:active,
         &:focus {
@@ -405,7 +405,7 @@
             color: #000;
             border-top: 0.2rem solid $color-subjects;
             &:hover {
-                border-bottom: none;
+                border-bottom: 0.1rem solid #fff;
             }
         }
     }
