style update c-view list display positioning left correction

--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -961,7 +961,7 @@ header.terms
         border-color: #cde3f7;
         border-width: 0.1rem 0 0;
         background-color: #fcfcfc;
-        margin-left: 5rem !important;
+        margin-left: 3rem !important;
     }
     .u-icon__plus {
         color: $color-terms;
@@ -1023,7 +1023,7 @@ header.terms
 
     .title {
         padding-top: 0.5rem;
-        margin-left: -2rem;
+        /*  margin-left: -2rem; */
         .header .subtitle {
             display: inline-block;
             margin-left: 0.5rem;
