--- a/kmaps-app/src/views/Terms/TermAudioPlayer/TermAudioPlayer.css
+++ b/kmaps-app/src/views/Terms/TermAudioPlayer/TermAudioPlayer.css
@@ -52,11 +52,12 @@
     padding: 0.5rem 0.25rem 0.5rem 1.75rem;
     border: none;
     border: 1px solid #ccc;
-    box-shadow: 0 0 0.4rem 0.1rem #ddd;
+    /* box-shadow: 0 0 0.4rem 0.1rem #ddd; */
     border-radius: 0.75rem;
+    background-color: #fff;
 }
 .c-audioPlayer__select:hover {
-    box-shadow: 0 0 0.6rem 0.15rem #4d59ca80;
+    box-shadow: 0 0 0.6rem 0.15rem #4d59ca50;
 }
 
 /*
