--- a/kmaps-app/src/views/Terms/TermDictionaries/TermDictionaries.css
+++ b/kmaps-app/src/views/Terms/TermDictionaries/TermDictionaries.css
@@ -14,7 +14,11 @@
     margin-left: -0.5rem;
 }
 .sui-termDicts__content {
-    padding: 1.6rem;
+    padding: 1.5rem 2rem;
+    background-color: #fff;
+    border: 0.1rem solid #ccc;
+    margin-top: 0.75rem;
+    border-radius: 0 0 1rem 1rem;
 }
 .sui-termDicts__dict-name {
     font-weight: 400;
