--- a/kmaps-app/src/views/Kmaps/RelatedViewer/RelatedsViewer.scss
+++ b/kmaps-app/src/views/Kmaps/RelatedViewer/RelatedsViewer.scss
@@ -392,13 +392,13 @@
         font-weight: bold;
         font-size: 1.2rem;
         padding: 1.2rem 2rem 0.75rem;
-        border-color: #ddd;
+        border-color: #ccc;
         border-radius: 0.75rem 0.75rem 0 0;
         background-color: #fff;
         &:hover,
         &:active,
         &:focus {
-            border-color: #c0c0c0;
+            border-color: #aaa;
         }
 
         &.active {
