--- a/kmaps-app/src/main/MainSearchToggle/MainSearchToggle.scss
+++ b/kmaps-app/src/main/MainSearchToggle/MainSearchToggle.scss
@@ -17,7 +17,7 @@
         &:focus {
             background-color: #646cbd !important;
             opacity: 1;
-            box-shadow: inset 0 0 2.5rem #4d59ca !important;
+            box-shadow: inset 0 0 2.5rem #3f49b1 !important;
         }
         &:not(.active) {
             &:first-child {
