--- a/kmaps-app/src/views/Kmaps/RelatedViewer/RelatedsViewer.scss
+++ b/kmaps-app/src/views/Kmaps/RelatedViewer/RelatedsViewer.scss
@@ -109,11 +109,11 @@
     padding: 0.15rem 0 0.5rem 1.25rem;
     margin: 0 0 0 0.25rem;
     background-color: #fff;
-    border: 0.15rem solid #ddd;
+    border: 0.1rem solid #ddd;
 }
 .c-related__item:hover {
     background-color: white !important;
-    border: 0.15rem solid $color-mandala;
+    border-color: $color-mandala;
     color: #555 !important;
 }
 .c-related__item:active {
