--- a/kmaps-app/src/views/Terms/TermAudioPlayer/TermAudioPlayer.css
+++ b/kmaps-app/src/views/Terms/TermAudioPlayer/TermAudioPlayer.css
@@ -13,7 +13,7 @@
     margin: 0;
     opacity: 1;
     transform: all (1.175);
-    transition: scale 0.25s ease-in-out;
+    transition: scale 0.25s;
     background: #4d59ca;
     padding: inherit;
     position: relative;
@@ -33,9 +33,10 @@
 }
 .c-audioPlayer__button .u-icon__audio::before {
     position: relative;
-    top: 0.1rem;
+    top: 0.2rem;
     color: #fff;
     font-size: 1.25em;
+    transition: font-size 0.25s;
 }
 .c-audioPlayer__select--wrapper {
     margin-left: 1.75rem;
