--- a/kmaps-app/src/views/common/FeatureFoldOutViewer.scss
+++ b/kmaps-app/src/views/common/FeatureFoldOutViewer.scss
@@ -24,19 +24,36 @@
     background-color: #222;
     padding: 2rem;
     position: relative;
-    // Icons and arrows
+
+    // Icons and arrows, close-x
+
     .c-foviewer__close {
-        color: #888;
+        color: transparent;
         font-size: 3rem;
         position: absolute;
-        top: 1rem;
-        right: 1.25rem;
-        cursor: pointer;
-        &:hover {
-            color: #ccc;
-        }
-        &:active {
-            color: #eee;
+        top: 0;
+        right: 0;
+        width: 5rem;
+        height: 5rem;
+        border: 0.1rem solid #444;
+        border-width: 0 0 0.1rem 0.1rem;
+
+        span {
+            width: 0.3rem;
+            height: 4rem;
+            transform-origin: rotate(45);
+            background-color: #999;
+            position: relative;
+            &::before {
+                content: '';
+                font-family: sans-serif;
+                color: transparent;
+                position: absolute;
+                left: 2rem;
+                top: 1rem;
+                z-index: 100;
+                display: inline-block;
+            }
         }
     }
 
