--- a/kmaps-app/src/main/SiteHeader/SiteHeader.scss
+++ b/kmaps-app/src/main/SiteHeader/SiteHeader.scss
@@ -58,7 +58,7 @@
             position: relative;
             input.sui-search2 {
                 font-size: 1.65rem;
-                padding: 0.4rem 8.5rem 0.25rem 1rem;
+                padding: 0.4rem 4rem 0.25rem 1rem;
                 background: transparent;
                 border: none;
                 border-bottom: 0.1rem solid rgba(77, 89, 201, 0.8); // --- color mandala, 50% opacity
@@ -68,8 +68,11 @@
                 color: #000;
                 box-shadow: none;
                 background: transparent;
+                &:placeholder-shown {
+                }
                 &:focus,
                 &:active {
+                    padding-right: 8.5rem;
                     width: 34rem;
                     outline: none;
                     background: #fff;
@@ -133,10 +136,16 @@
                 right: 3.1rem;
                 display: inline-block;
                 font-size: 1.8rem;
-                span::before {
-                    color: $color-mandala;
-                    opacity: 0.6;
-                    transition: opacity 400ms;
+                span {
+                    &::before {
+                        color: $color-mandala;
+                        opacity: 0.6;
+                        transition: opacity 400ms;
+                    }
+                    &:hover::before {
+                        opacity: 1;
+                        color: #000;
+                    }
                 }
             }
         }
@@ -173,7 +182,10 @@ input.sui-search2:focus + .sui-search3 + .sui-search4 span::before,
 input.sui-search2:active + .sui-search3 + .sui-search4 span::before {
     opacity: 1;
 }
-
+input.sui-search2:focus + .sui-search3 + .sui-search4 span:hover::before,
+input.sui-search2:active + .sui-search3 + .sui-search4 span:hover::before {
+    color: #000;
+}
 .navbar-nav,
 .navbar-toggler,
 .c-site__header-standalone {
